Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-59666

Renaming system.buckets collection should be disallowed

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 5.0.4, 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Labels:
    • Fully Compatible
    • ALL
    • v5.0
    • Hide

      MongoDB Enterprise > db.createCollection("ts", {timeseries: {timeField: 't'}})

      { "ok" : 1 }

      MongoDB Enterprise > db.adminCommand(

      {renameCollection: "test.system.buckets.ts", to: "test.otherColl", dropTarget: false}

      )

      { "ok" : 1 }

      MongoDB Enterprise > db.getCollectionInfos()
      uncaught exception: Error: error doing query: failed: network error while attempting to run command 'listCollections' on host '127.0.0.1:27017' :
      DB.prototype.runCommand@src/mongo/shell/db.js:177:19
      DB.prototype._getCollectionInfosCommand@src/mongo/shell/db.js:691:17
      DB.prototype.getCollectionInfos@src/mongo/shell/db.js:741:16
      @(shell):1:1

      Show
      MongoDB Enterprise > db.createCollection("ts", {timeseries: {timeField: 't'}}) { "ok" : 1 } MongoDB Enterprise > db.adminCommand( {renameCollection: "test.system.buckets.ts", to: "test.otherColl", dropTarget: false} ) { "ok" : 1 } MongoDB Enterprise > db.getCollectionInfos() uncaught exception: Error: error doing query: failed: network error while attempting to run command 'listCollections' on host '127.0.0.1:27017' : DB.prototype.runCommand@src/mongo/shell/db.js:177:19 DB.prototype._getCollectionInfosCommand@src/mongo/shell/db.js:691:17 DB.prototype.getCollectionInfos@src/mongo/shell/db.js:741:16 @(shell):1:1
    • Execution Team 2021-09-20, Execution Team 2021-10-04

      Renaming system.buckets seems to corrupt the collection metadata, causing a server crash when listCollections command is issue.

            Assignee:
            reo.kimura@mongodb.com Reo Kimura (Inactive)
            Reporter:
            arun.banala@mongodb.com Arun Banala
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: