SERVER-59666 Disallow renaming system.buckets collections